# sier2-blocks-datamap

./: README.rst  pyproject.toml
src/sier2_blocks_datamap/: dags.py
src/sier2_blocks_datamap/blocks/: __init__.py  datamap.py  thisnotthat.py  umap.py
src/sier2_blocks_datamap/dags/: __init__.py  _datamap.py  datamap.py
src/sier2_blocks_datamap/shelf/: __init__.py
