[project]
name = "sier2-blocks-datamap"
version = "0.3"
description = "Datamap blocks for sier2"
authors = [
    {name="jacobgolding", email="jacobgolding <jacobgolding@users.noreply.github.com>"}
]
readme = "README.rst"
packages = [{include = "sier2_blocks_datamap", from = "src"}]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries"
]

[dependencies]
python = "^3.11"
panel = ">=1.4.4"
param = ">=2.1.0"
sier2 = ">=0.30"
umap-learn = ">=0.5.7"
thisnotthat = ">=0.4"

[tool.poetry.plugins."sier2.library"]
export = "sier2_blocks_datamap.shelf"

[build-system]
requires = ["poetry-core>=2.1.1"]
build-backend = "poetry.core.masonry.api"
